# MorphoJet

./: .gitignore  Cargo.toml  LICENSE  MORPHOJET-FEASIBILITY.md  README.md  README.zh-CN.md  requirements-l3.txt
.github/: dependabot.yml
benchmark/: audit_production_evidence.py  build_cellbindb_cellprofiler_pipeline.py  build_image_table.py  build_oracle_image_table.py  build_release_archive.py  check_cellprofiler_wide_contract.py  check_external_l4_readiness.py  compare_cellprofiler_wide_subset.py  convert_npy_masks_to_tiff.py  export_cellprofiler_masks.py  fetch_cellprofiler_examples.py  fetch_zenodo_file.py  impact_report.py  inspect_cellbindb_direct_masks.py  inspect_cellprofiler_pipeline.py  materialize_cellprofiler_oracle.py  materialize_morphojet_cellprofiler_wide.py  package_external_trial.py  prepare_cellbindb.py  prepare_external_l4_trial.py  release_gate.py  run.sh  run_cellbindb_l3_validation.sh  run_cellbindb_oracle.py  run_command_metrics.py  run_docker_metrics.py  run_examplehuman_oracle.py  run_external_l4_rehearsal.py  run_handoff_trial.py  run_oracle_benchmark.py  run_production_gate.py  run_scale.py  scan_cellprofiler_examples.py  summarize.py  triage_oracle_candidates.py  validate_benchmark_manifest.py  validate_claim_language.py  validate_handoff_manifest.py  (+6 more)
corpus/: README.md  (+1 more)
crates/morphojet/: Cargo.toml  build.rs
crates/morphojet-core/: Cargo.toml
crates/morphojet-core/src/: image_table.rs  lib.rs  measure.rs  output.rs
crates/morphojet-core/tests/: measure_smoke.rs
crates/morphojet/src/: main.rs
crates/morphojet/tests/: cli.rs
(+50 files in other folders)
