[workspace]
members = [
  "crates/morphojet-core",
  "crates/morphojet",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/benngaihk/MorphoJet"

[workspace.dependencies]
anyhow = "1.0"
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
