[package]
name = "morphojet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
morphojet-core = { path = "../morphojet-core" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
